force-app/main/default/objects/Timetable__c/Timetable__c.object-meta.xml
<CustomObject>
    <label>Timetable</label>
    <nameField>
        <label>Timetable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timetables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>