force-app/main/default/objects/Timetable__c/fields/Classroom__c.field-meta.xml
<CustomField>
    <fullName>Classroom__c</fullName>
    <label>Classroom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>