force-app/main/default/objects/Timetable__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <length>40</length>
    <type>Text</type>
</CustomField>