force-app/main/default/objects/Timetable__c/fields/Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Name__c</fullName>
    <label>Faculty Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>