force-app/main/default/objects/Timetable__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <formula>Day__c &amp;
&quot; - &quot; &amp;
Time_Slot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule</label>
    <type>Text</type>
</CustomField>