force-app/main/default/objects/Timetable__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>