force-app/main/default/objects/Timetable__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>