force-app/main/default/objects/Timetable__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>