force-app/main/default/objects/Timetable__c/validationRules/Department_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Department__c)</errorConditionFormula>
    <errorMessage>Faculty Name is required.</errorMessage>
</ValidationRule>