force-app/main/default/objects/Timetable__c/validationRules/Faculty_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Faculty_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Faculty_Name__c)</errorConditionFormula>
    <errorMessage>Faculty Name is required.</errorMessage>
</ValidationRule>