force-app/main/default/objects/Timetable__c/validationRules/Time_Slot_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Slot_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Time_Slot__c)</errorConditionFormula>
    <errorMessage>Time Slot is required.</errorMessage>
</ValidationRule>